fix: markdown pre overflow (#7916)

--- a/static/css/parts/Markdown.css
+++ b/static/css/parts/Markdown.css
@@ -10,6 +10,11 @@
   line-height: 1.5;
   word-wrap: break-word;
   contain: content;
+  overflow: hidden;
+}
+
+.Markdown pre {
+  overflow: auto;
 }
 
 .Markdown details,
